
0.9.8h Jul 29, 2004
 * updated manpage
 * changed "/patches/PACKAGES.TXT" to macro PATCHES_LIST for quiet hack in download_data()
 * added audioslack packages sources to example.slapt-getrc
 * updated documentation
 * added cached notification when using -S switch
 * updated example.slapt-getrc
 * removed needless "Retrieving checksum list [%s]...\n" string from translations
 * now ftp package sources print "Cached" if cached
 * added check in download_data, silence error if url contains "/patches/PACKAGES.TXT"
   for failed download

0.9.8g Jul 21, 2004
 * updated slack-desc
 * default download progress now shows percentage instead of spinner
 * added new linuxpackages.net mirror to example.slapt-getrc
 * finally made a few private functions static
 * moved parse_excludes from package.[ch] to configuration.[ch]
 * updated documentation
 * added support for ftp source caching
 * translation updates
 * support for only downloading package data if newer than cached during --update
 * now caches package data for each individual package sourch per --update run
 * moved spinner and progress_callback from main.[ch] to curl.[ch]
 * moved is_conflicted from action.[ch] to transaction.[ch]
 * added swedish translation by Joel Bjurman (ypolt@lediga.st)
 * documentation updates

0.9.8f Jun 29, 2004
 * makefile update, autogenerated slapt-getrc.new is now bare bones with a
   pointer comment to /usr/doc/slapt-get*/example.slapt-getrc
 * updated example.slapt-getrc setting slackware-10.0 as default release source
 * initialized various integer values that needed it
 * /pasture support
 * makefile updates
 * fixed /testing/ and /extra/ support so that the download url's and md5
   checksums are detected/generated correctly

0.9.8e Jun 07, 2004
 * moved search_transaction() calls into add_[install,upgrade,exclude]_to_transaction()
 * updated doinstall make target
 * dist-upgrade will now reinstall if the package versions differ (vanilla