@@ -1,5 +1,8 @@
 
 0.9.8h Jul 29, 2004
+ * fixed endless recursion in is_required_by() when packages declare circular dependencies
+ * fixed endless recursion in lookup_pkg_dependencies when --no-dep used to ignore dep errors
+   on packages with circular dependencies
  * updated manpage
  * changed "/patches/PACKAGES.TXT" to macro PATCHES_LIST for quiet hack in download_data()
  * added audioslack packages sources to example.slapt-getrc
